# rag_datasets

./: .gitattributes  .gitignore  README.md
legal_documents/: README.md  ipla.md  nda.md  questions.json  sda.md  sla.md
legal_documents/extras/: bda.md  csla.md  dpa.md  eula.md  mada.md  wda.md
spaceships/: Makefile  generate.py  pyproject.toml
spaceships/stellar_nomad/: chapter_summaries.md  name_and_crew.md  plot_outline.md
spaceships/stellar_nomad/contents/: chapter_1.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_14.md  chapter_15.md  chapter_16.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md  epilog.md
